--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue-axios": "^3.3.7",
     "vue-router": "^3.2.0",
     "vuetable-2": "^2.0.0-beta.4",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^3.1.3",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
