--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-axios": "^3.3.7",
     "vue-router": "^3.2.0",
     "vuetable-2": "^2.0.0-beta.4",
+    "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
     "vuex-persist": "^3.1.3",
     "vuex-persistedstate": "^4.1.0"
@@ -31,7 +32,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
